--- a/blocks/popups/popups.css
+++ b/blocks/popups/popups.css
@@ -1,4 +1,5 @@
-.popup_type_image-disp{
+@import url(../popups/_hidden/popups_hidden.css);
+.popups{
   margin: 0;
   position: fixed;
   top: 0;
@@ -6,6 +7,11 @@
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.5);
+
+
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
